--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,10 @@
         android:layout_height="wrap_content"
         android:text="Add Todo"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnDeleteDoneTodos" />
+        app:layout_constraintEnd_toStartOf="@+id/btnDeleteTodo" />
 
     <Button
-        android:id="@+id/btnDeleteDoneTodos"
+        android:id="@+id/btnDeleteTodo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Delete"
